<resources>
    <string name="app_name">iShop</string>
    <string name="dang_ky1">Đăng Ký</string>
    <string name="da_co_tai_khoan">Đã có tài khoản?</string>
    <string name="dang_nhap2">Đăng Nhập</string>
    <string name="chua_co_tai_khoan">Chưa có tài khoản?</string>
    <string name="ng_nh_p">Đăng Nhập</string>
    <string name="email_sdt">Nhập email hoặc sdt</string>
    <string name="is">IS</string>
    <string name="nh_p_m_t_kh_u">Nhập mật khẩu</string>
    <string name="dang_nhap1">Đăng Nhập</string>
    <string name="is_index">IS</string>
    <string name="dang_ky2">Đăng Ký</string>
    <string name="nhap_mat_khau">Nhập mật khẩu</string>
    <string name="nhap_sdt">Nhập số điện thoại</string>
    <string name="nh_p_email">Nhập email</string>
    <string name="nhap_ten">Nhập tên</string>
    <string name="dang_ky">Đăng Ký</string>
    <string name="is_up">IS</string>
    <string name="them_sp">Thêm sản phẩm</string>
    <string name="nhap_maSP">Nhập mã:</string>
    <string name="ten_sp">Nhập tên:</string>
    <string name="nhap_gia">Nhập giá:</string>
    <string name="mo_ta_sp">Nhập mô tả:</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="todo">TODO</string>
    <string name="đổi_MK">Đổi mật khẩu</string>
    <string name="NhậpMậtKhẩuCũ">Nhập mật khẩu cũ:</string>
    <string name="Nhập_MK_mới">Nhập mật khẩu mới:</string>
    <string name="XácNhận_MK">Xác nhận mật khẩu:</string>
    <string name="Xac_nhận">Xác nhận</string>
    <string name="Hủy">Hủy</string>
    <string name="Chỉnh_sửa_loại_sản_phẩm">Chỉnh sửa loại sản phẩm</string>
    <string name="Nhập_loại_mã">Nhập mã loại:</string>
    <string name="Nhập_loại_tên">Nhập tên loại:</string>
    <string name="Xác_nhận">Xác nhận</string>
    <string name="Thêm_loại_sản_phẩm">Thêm loại sản phẩm</string>
    <string name="Nhập_mã_loại">Nhập mã loại:</string>
    <string name="Nhập_tênLoại">Nhập tên loại:</string>
    <string name="Xác_nhân">Xác nhận</string>
    <string name="x_c_nh_n">Xác nhận</string>
    <string name="nh_p_m_t">Nhập mô tả:</string>
    <string name="nhập_giá">Nhập giá:</string>
    <string name="nhap_tene">Nhập tên:</string>
    <string name="NhậpMã">Nhập mã:</string>
    <string name="ch_nh_s_a_s_n_ph_m">Chỉnh sửa sản phẩm</string>
    <string name="todoz">TODO</string>
    <string name="iphone_15_pro_max">iPhone 15 Pro Max</string>
    <string name="_30_990_000">30.990.000</string>
    <string name="đ">đ</string>
    <string name="name">Name</string>
    <string name="sodienthoai">Số điện thoại:</string>
    <string name="sdt">SDT</string>
    <string name="email">Email:</string>
    <string name="email2">Email</string>
    <string name="diachi1">Địa chỉ:</string>
    <string name="location_customer">Location Customer</string>
    <string name="sốdơnđặthàng">Số đơn hàng đã đặt:</string>
    <string name="num">Num</string>
    <string name="s_n_h_ng_t">Số đơn hàng đã đặt:</string>
    <string name="đổimậtkhẩu">Đổi mật khẩu</string>
    <string name="t_m_ki_m">Tìm kiếm</string>
    <string name="mana">mana</string>
    <string name="name2">Name</string>
    <string name="sốđiệnthoại2">Số điện thoại:</string>
    <string name="sdt2">SDT</string>
    <string name="email3">Email:</string>
    <string name="email4">Email</string>
    <string name="địachỉ">Địa chỉ:</string>
    <string name="location_customer2">Location Customer</string>
    <string name="chưaxửlý">Chưa xử lý</string>
    <string name="đangsửlý">Đang xử lý</string>
    <string name="đã_sử_lý">Đã xử lý</string>
    <string name="ishop">iShop</string>
    <string name="giỏ_hàng1">Giỏ hàng</string>
    <string name="_0">0</string>
    <string name="Đặt_hàng">Đặt Hàng</string>
    <string name="tất_cả">Tất cả</string>
    <string name="iphone">iPhone</string>
    <string name="ipad">iPad</string>
    <string name="apple_watch">Apple Watch</string>
    <string name="mac">Mac</string>
    <string name="th_ng_k_doanh_thu">Thống kê doanh thu</string>
    <string name="ThốngKê_kháchHàng">Thống kê khách hàng</string>
    <string name="ThốngKê_SảnPhẩm">Thống kê sản phẩm</string>
    <string name="ThốngKê_MuaHàng">Thống kê mua hàng</string>
    <string name="th_ng_b_o">Thông Báo</string>
    <string name="iphone2">Iphone</string>
    <string name="iphone3">Iphone</string>
    <string name="iphone_15_pro_max1">iPhone 15 Pro Max</string>
    <string name="i_phone">iPhone</string>
    <string name="_309_900_000">309.900.000</string>
    <string name="đ_1">đ</string>
    <string name="_10">10</string>
    <string name="Mã">Mã:</string>
    <string name="ipe2007">iPE2007</string>
    <string name="t_n_lo_i">Tên loại:</string>
    <string name="iphone5">iPhone</string>
    <string name="s_l_ng">Số lượng:</string>
    <string name="_34">34</string>
    <string name="m_u">mẫu</string>
    <string name="m_s">Mã số:</string>
    <string name="ipe0000">iPE0000</string>
    <string name="t_n">Tên:</string>
    <string name="iphone_15_pro_max2">iPhone 15 Pro Max</string>
    <string name="đơngiá">Đơn giá:</string>
    <string name="_31_990_000">30.990.000</string>
    <string name="Đ">đ</string>
    <string name="Loại">Loại:</string>
    <string name="iphone6">iPhone</string>
    <string name="nh_p_m">Nhập mã:</string>
    <string name="nh_p_t_n">Nhập tên:</string>
    <string name="nh_p_gi">Nhập giá:</string>
    <string name="nh_p_m_t2">Nhập mô tả:</string>
    <string name="h_nh_nh_s_n_ph_m">Hình ảnh sản phẩm</string>
    <string name="xácnhận">Xác nhận</string>
    <string name="Thêm_SP">Thêm sản phẩm</string>
    <string name="_Đ">đ</string>
    <string name="_1">1</string>
    <string name="m_t">Mô tả:</string>
    <string name="iphone_15_pro_max_k_t_h_p_khung_th_p_kh_ng_g_v_m_t_l_ng_k_nh_m_sang_tr_ng_m_n_h_nh_oled_6_7_inch_tr_n_vi_n_c_ng_ngh_promotion_120hz_v_chip_a17_bionic_m_b_o_hi_u_n_ng_v_t_tr_i_h_th_ng_camera_ba_ng_k_nh_v_c_m_bi_n_lidar_mang_l_i_kh_n_ng_ch_p_nh_quay_video_xu_t_s_c_y_l_s_k_t_h_p_ho_n_h_o_gi_a_c_ng_ngh_v_ngh_thu_t">iPhone 15 Pro Max kết hợp khung thép không gỉ và mặt lưng kính mờ sang trọng. Màn hình OLED 6.7 inch tràn viền, công nghệ ProMotion 120Hz và chip A17 Bionic đảm bảo hiệu năng vượt trội. Hệ thống camera ba ống kính và cảm biến LiDAR mang lại khả năng chụp ảnh, quay video xuất sắc. Đây là sự kết hợp hoàn hảo giữa công nghệ và nghệ thuật.</string>
    <string name="th_m_v_o_gi_h_ng">Thêm vào giỏ hàng</string>
    <string name="x_l_n_h_ng">Xử lý đơn hàng</string>
    <string name="Mã_HD">Mã hóa đơn:</string>
    <string name="hd0000">HD0000</string>
    <string name="Hd0000">HD0000</string>
    <string name="m_n_h_ng">Mã đơn hàng:</string>
    <string name="th_i_gian_t_h_ng">Thời gian đặt hàng:</string>
    <string name="_14_07_2024">14/07/2024</string>
    <string name="nh_n_vi_n_x_l">Nhân viên xử lý:</string>
    <string name="nghieu_thanh_phong">Nghiêu Thanh Phong</string>
    <string name="th_ng_tin_ng_i_nh_n">Thông tin người nhận</string>
    <string name="Tên_Người_nhận">Tên người nhận:</string>
    <string name="nghi_u_thanh_phong">Nghiêu Thanh Phong</string>
    <string name="s_i_n_tho_i">Số điện thoại</string>
    <string name="_0774747744">0774747744</string>
    <string name="a_ch_nh_n_h_ng">Địa chỉ nhận hàng</string>
    <string name="_95_12_ng_nguy_n_t_n_th_nh_ph_ng_t_n_quy_qu_n_174">95/12 đường Nguyễn Tấn Thành phường Tân Quy Quận 174</string>
    <string name="ph_ng_th_c_thanh_to_n">Phương thức thanh toán</string>
    <string name="ti_n_m_t_khi_nh_n_h_ng">Tiền mặt khi nhận hàng</string>
    <string name="s_n_ph_m">Sản phẩm</string>
    <string name="th_ng_tin_thanh_to_n">Thông tin thanh toán</string>
    <string name="t_ng_s_l_ng_s_n_ph_m">Tổng số lượng sản phẩm:</string>
    <string name="_100">100</string>
    <string name="_100_1">100</string>
    <string name="d">đ</string>
    <string name="t_ng_ti_n_n_h_ng">Tổng tiền đơn hàng:</string>
    <string name="ph_v_n_chuy_n">Phí vận chuyển:</string>
    <string name="_0_0">0</string>
    <string name="_đ">đ</string>
    <string name="xu_t_h_a_n">Xuất hóa đơn</string>
    <string name="t_ng_ti_n">Tổng tiền:</string>
    <string name="_100_">100</string>
    <string name="_2">đ</string>
    <string name="Khách_hàng">Khách hàng</string>
    <string name="name_1">Name</string>
    <string name="SDT">Số điện thoại:</string>
    <string name="sdt_1">SDT</string>
    <string name="email_1">Email:</string>
    <string name="email_2">Email</string>
    <string name="a_ch">Địa chỉ:</string>
    <string name="location_customer_1">Location Customer</string>
    <string name="SốĐơnHàng">Số đơn hàng đã đặt:</string>
    <string name="num1">Num</string>
    <string name="s_n_h_ng_">Số đơn hàng đã đặt:</string>
    <string name="iphone_15_pro_max_1">iPhone 15 Pro Max</string>
    <string name="m_so">Mã số:</string>
    <string name="ipe0000_1">iPE0000</string>
    <string name="t_en">Tên:</string>
    <string name="iphone_15_pro_max_2">iPhone 15 Pro Max</string>
    <string name="d_d">đ</string>
    <string name="_30_990_000_1">30.990.000</string>
    <string name="gi">Giá:</string>
    <string name="giới_thiệu">iPhone 15 Pro Max kết hợp khung thép không gỉ và mặt lưng kính mờ sang trọng. Màn hình OLED 6.7 inch tràn viền, công nghệ ProMotion 120Hz và chip A17 Bionic đảm bảo hiệu năng vượt trội. Hệ thống camera ba ống kính và cảm biến LiDAR mang lại khả năng chụp ảnh, quay video xuất sắc. Đây là sự kết hợp hoàn hảo giữa công nghệ và nghệ thuật.</string>
    <string name="s_l_ng_t_n_kho">Số lượng tồn kho:</string>
    <string name="m_ta">Mô tả:</string>
    <string name="_2407">2407</string>
    <string name="ch_nh_s_a">Chỉnh sửa</string>
    <string name="TODo">TODo</string>
    <string name="nh">ảnh</string>
    <string name="_100_000_000_000">100.000.000.000</string>
    <string name="ng_i_d_ng">người dùng</string>
    <string name="ch_n_th_i_gian_th_ng_k">Chọn thời gian thống kê</string>
    <string name="_14_07_2024z">14/07/2024</string>
    <string name="_100_000_000_0001">100.000.000.000</string>
    <string name="s_kh_ch_h_ng_ng_k_app">Số khách hàng đã đăng ký app:</string>
    <string name="ng_i_d_ung">người dùng</string>
    <string name="_100_000_000_0002">100.000.000.000</string>
    <string name="s_kh_ch_h_ng_mua_h_ng">Số khách hàng đã mua hàng:</string>
    <string name="ng_i_du_ng">người dùng</string>
    <string name="t_ng_kh_ch_h_ng_ng_k_app">Tổng khách hàng đã đăng ký app:</string>
    <string name="th_ng_k_kh_ch_h_ng">Thống kê khách hàng</string>
    <string name="t_ng_kh_ch_h_ng_mua_h_ng">Tổng khách hàng đã mua hàng:</string>
    <string name="_100_000_000_0003">100.000.000.000</string>
    <string name="ng_uoi_d_ng">người dùng</string>
    <string name="m_h_a_n">Mã hóa đơn:</string>
    <string name="hd0000_12">HD0000</string>
    <string name="m_n_h_ng4">Mã đơn hàng:</string>
    <string name="dh00004">DH0000</string>
    <string name="m_kh_ch_h_ng1">Mã khách hàng:</string>
    <string name="kh000000">KH0000</string>
    <string name="th_i_gian_x_l4">Thời gian xử lý:</string>
    <string name="_14_07_20244">14/07/2024</string>
    <string name="xem_chi_ti_t">Xem chi tiết</string>
    <string name="qu_n_l_n_h_ng">Quản lý đơn hàng</string>
    <string name="qu_n_l_h_a_n">Quản lý hóa đơn</string>
    <string name="qu_n_l_kh_ch_h_ng">Quản lý khách hàng</string>
    <string name="trang_c_nh_n">Trang cá nhân</string>
    <string name="i_m_t_kh_u">Đổi mật khẩu</string>
    <string name="tho_t">Thoát</string>
    <string name="qu_n_l_n_h_ng4">Quản lý đơn hàng</string>
    <string name="qu_n_l_h_a_n1">Quản lý hóa đơn</string>
    <string name="qu_n_l_s_n_ph_m">Quản lý sản phẩm</string>
    <string name="qu_n_l_kh_ch_h_ng5">Quản lý khách hàng</string>
    <string name="th_ng_k4">Thống kê</string>
    <string name="trang_c_nh_n5">Trang cá nhân</string>
    <string name="ji_m_t_kh_u">Đổi mật khẩu</string>
    <string name="tho_t5">Thoát</string>
</resources>