<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Fragment_Manage_Orders"
        android:title="@string/qu_n_l_n_h_ng4"
        android:icon="@drawable/icon_cart"/>

    <item
        android:id="@+id/Fragment_Manage_Bill"
        android:title="@string/qu_n_l_h_a_n1"
        android:icon="@drawable/icon_bill"/>

    <item
        android:id="@+id/Fragment_Manage_Product"
        android:title="@string/qu_n_l_s_n_ph_m"
        android:icon="@drawable/icon_product"/>

    <item
        android:id="@+id/Fragment_Manage_Customers"
        android:title="@string/qu_n_l_kh_ch_h_ng5"
        android:icon="@drawable/icon_group"/>

    <item
        android:id="@+id/Fragment_Statistical"
        android:title="@string/th_ng_k4"
        android:icon="@drawable/icon_statistical"/>"
    <item
        android:id="@+id/proFile"
        android:title="@string/trang_c_nh_n5"
        android:icon="@drawable/icon_user"/>

    <item
        android:id="@+id/Dialog_Change_Password"
        android:title="@string/ji_m_t_kh_u"
        android:icon="@drawable/icon_change_pass"/>

    <item
        android:id="@+id/Exit"
        android:title="@string/tho_t5"
        android:icon="@drawable/icon_exit"/>
</menu>