<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:padding="12dp"
    android:orientation="vertical"
    android:background="@drawable/fill_radius_16"
    android:backgroundTint="@color/Background_Bill"
    android:id="@+id/Recy_Bill">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_h_a_n"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/Data_Code_Bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/hd0000_12"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_n_h_ng4"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/Data_Code_Orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dh00004"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_kh_ch_h_ng1"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/Data_Code_Customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/kh000000"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/th_i_gian_x_l4"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/Data_Date_Orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_14_07_20244"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/Btn_Detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/xem_chi_ti_t"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/Light"
        android:background="@drawable/fill_radius_16"
        app:backgroundTint="@color/Link"/>

</LinearLayout>