<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Type_Manager.Page_Statistical_Customer"
    android:orientation="vertical"
    android:background="@color/Light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/Light">

        <ImageView
            android:id="@+id/Icon_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_back"
            android:rotation="180"/>

        <TextView
            android:id="@+id/Title_Page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/th_ng_k_kh_ch_h_ng"
            android:textColor="@color/Dark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/Icon_Back"
            android:paddingStart="12dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_ng_kh_ch_h_ng_ng_k_app"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/Dark"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/Data_Total_Customer_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100_000_000_0003"
            android:textSize="24sp"
            android:textColor="@color/Link"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ng_uoi_d_ng"
            android:textSize="24sp"
            android:textColor="@color/Link"
            android:textStyle="bold"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_ng_kh_ch_h_ng_mua_h_ng"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/Dark"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp">

        <TextView
            android:id="@+id/Data_Total_Customer_Buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100_000_000_000"
            android:textSize="24sp"
            android:textColor="@color/Link"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ng_i_d_ng"
            android:textSize="24sp"
            android:textColor="@color/Link"
            android:textStyle="bold"/>
    </LinearLayout>


    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ch_n_th_i_gian_th_ng_k"
        android:textColor="@color/Dark"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/fill_radius_16"
        app:backgroundTint="#E3E3E3"/>

    <TextView
        android:id="@+id/myDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_14_07_2024z"
        android:textStyle="bold"
        android:textColor="@color/Dark"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_kh_ch_h_ng_ng_k_app"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/Dark"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/Data_Customer_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100_000_000_0001"
            android:textSize="24sp"
            android:textColor="@color/Link"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ng_i_du_ng"
            android:textSize="24sp"
            android:textColor="@color/Link"
            android:textStyle="bold"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_kh_ch_h_ng_mua_h_ng"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/Dark"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp">

        <TextView
            android:id="@+id/Data_Customer_Buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100_000_000_0002"
            android:textSize="24sp"
            android:textColor="@color/Link"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ng_i_d_ung"
            android:textSize="24sp"
            android:textColor="@color/Link"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>