<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Type_Manager.Page_Manage_Detail_Product"
    android:background="@color/Light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/Icon_Back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/TODo"
                android:src="@drawable/icon_back"
                android:rotation="180"/>

            <TextView
                android:id="@+id/Data_TitleName_Product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iphone_15_pro_max_1"
                android:textColor="@color/Dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/Icon_Back"
                android:paddingStart="12dp"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/Data_Image_Product"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/nh"
            android:src="@mipmap/iphone_15_pro_max"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/TT_Code_Product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_so"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/Data_Code_Product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ipe0000_1"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/TT_Code_Product"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/TT_Name_Product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_en"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/Data_Name_Product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iphone_15_pro_max_2"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/TT_Name_Product"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/TT_Price_Product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gi"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/Data_Price_Product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30_990_000_1"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/TT_Price_Product"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d_d"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/Data_Price_Product"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/TT_Description_Product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_ta"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/Data_Description_Product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/giới_thiệu"
                android:textSize="18sp"
                android:layout_below="@+id/TT_Description_Product"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/TT_Inventory_Product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_l_ng_t_n_kho"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/Data_Inventory_Product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2407"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/TT_Inventory_Product"/>
        </RelativeLayout>

        <Button
            android:id="@+id/Btn_Page_Fix_Product"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:text="@string/ch_nh_s_a"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/fill_radius_16"
            app:backgroundTint="@color/Link"/>

    </LinearLayout>

</ScrollView>