<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/Light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Thêm_loại_sản_phẩm"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/Dark"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/EdtAdd_Code_ProductType"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/Nhập_mã_loại"
        android:textColorHint="@color/Dark"
        android:textStyle="bold"
        android:paddingStart="15dp"
        android:background="@drawable/stroke_raidus_16"/>

    <EditText
        android:id="@+id/EdtAdd_Name_ProductType"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/Nhập_tênLoại"
        android:textColorHint="@color/Dark"
        android:textStyle="bold"
        android:paddingStart="15dp"
        android:background="@drawable/stroke_raidus_16"/>

    <Button
        android:id="@+id/Btn_Add_ProductType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/Xác_nhân"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/fill_radius_16"
        app:backgroundTint="@color/Link"/>

</LinearLayout>